--- a/components/Pane.module.scss
+++ b/components/Pane.module.scss
@@ -21,5 +21,6 @@
   @include tight-screen {
     padding-bottom: 1em;
     min-height: 200px;
+    box-shadow: none;
   }
 }
